--- a/graph.html
+++ b/graph.html
@@ -138,38 +138,33 @@
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
 1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label=utter_happy];
-4 [class="", fontsize=12, label=utter_cheer_up];
-5 [class="", fontsize=12, label=utter_did_that_help];
-10 [class="", fontsize=12, label=utter_goodbye];
-11 [class="", fontsize=12, label="..."];
-14 [class="", fontsize=12, label=utter_iamabot];
-15 [class=intent, fillcolor=lightblue, label=goodmorning, shape=rect, style=filled];
-16 [class=intent, fillcolor=lightblue, label="I am amazing", shape=rect, style=filled];
-17 [class=intent, fillcolor=lightblue, label="very sad", shape=rect, style=filled];
-18 [class=intent, fillcolor=lightblue, label=y, shape=rect, style=filled];
-19 [class=intent, fillcolor=lightblue, label="don't like that", shape=rect, style=filled];
-20 [class=intent, fillcolor=lightblue, label="bye bye", shape=rect, style=filled];
-21 [class=intent, fillcolor=lightblue, label="am I talking to a human?", shape=rect, style=filled];
-0 -> 11  [class="", key=NONE, label=""];
-0 -> 15  [class="", key=0];
-1 -> 16  [class="", key=0];
-1 -> 17  [class="", key=0];
-2 -> "-1"  [class="", key=NONE, label=""];
-4 -> 5  [class="", key=NONE, label=""];
-5 -> 18  [class="", key=0];
-5 -> 19  [class="", key=0];
+2 [class="", fontsize=12, label=utter_ask];
+3 [class="", fontsize=12, label=utter_affirm_help];
+6 [class="", fontsize=12, label=utter_deny_help];
+7 [class="", fontsize=12, label="..."];
+8 [class="", fontsize=12, label=utter_goodbye];
+10 [class="", fontsize=12, label=utter_iamabot];
+11 [class=intent, fillcolor=lightblue, label=hey, shape=rect, style=filled];
+12 [class=intent, fillcolor=lightblue, label="of course", shape=rect, style=filled];
+13 [class=intent, fillcolor=lightblue, label=n, shape=rect, style=filled];
+14 [class=intent, fillcolor=lightblue, label=goodbye, shape=rect, style=filled];
+15 [class=intent, fillcolor=lightblue, label="are you a human?", shape=rect, style=filled];
+0 -> 7  [class="", key=NONE, label=""];
+0 -> 11  [class="", key=0];
+1 -> 2  [class="", key=NONE, label=""];
+2 -> 12  [class="", key=0];
+2 -> 13  [class="", key=0];
+3 -> "-1"  [class="", key=NONE, label=""];
+6 -> "-1"  [class="", key=NONE, label=""];
+7 -> 14  [class="", key=0];
+7 -> 15  [class="", key=0];
+8 -> "-1"  [class="", key=NONE, label=""];
 10 -> "-1"  [class="", key=NONE, label=""];
-11 -> 20  [class="", key=0];
-11 -> 21  [class="", key=0];
-14 -> "-1"  [class="", key=NONE, label=""];
-15 -> 1  [class="", key=0];
-16 -> 2  [class="", key=0];
-17 -> 4  [class="", key=0];
-18 -> 2  [class="", key=0];
-19 -> 10  [class="", key=0];
-20 -> 10  [class="", key=0];
-21 -> 14  [class="", key=0];
+11 -> 1  [class="", key=0];
+12 -> 3  [class="", key=0];
+13 -> 6  [class="", key=0];
+14 -> 8  [class="", key=0];
+15 -> 10  [class="", key=0];
 }
 `;
     drawGraph(graph);
