--- a/graph.html
+++ b/graph.html
@@ -147,39 +147,49 @@
 12 [class="", fontsize=12, label=utter_goodbye];
 14 [class="", fontsize=12, label=utter_iamabot];
 16 [class="", fontsize=12, label=utter_youarewelcome];
-17 [class=intent, fillcolor=lightblue, label="how do I get started", shape=rect, style=filled];
-18 [class=intent, fillcolor=lightblue, label=y, shape=rect, style=filled];
-19 [class=intent, fillcolor=lightblue, label="I don't think so", shape=rect, style=filled];
-20 [class=intent, fillcolor=lightblue, label=hey, shape=rect, style=filled];
-21 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
-22 [class=intent, fillcolor=lightblue, label="bye bye", shape=rect, style=filled];
-23 [class=intent, fillcolor=lightblue, label="is this a real person", shape=rect, style=filled];
-24 [class=intent, fillcolor=lightblue, label="thanks friend", shape=rect, style=filled];
+18 [class="", fontsize=12, label=utter_siting_on_the_server];
+20 [class="", fontsize=12, label=utter_skills];
+21 [class=intent, fillcolor=lightblue, label=start, shape=rect, style=filled];
+22 [class=intent, fillcolor=lightblue, label=y, shape=rect, style=filled];
+23 [class=intent, fillcolor=lightblue, label="don't like that", shape=rect, style=filled];
+24 [class=intent, fillcolor=lightblue, label=goodevening, shape=rect, style=filled];
+25 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
+26 [class=intent, fillcolor=lightblue, label="see you around", shape=rect, style=filled];
+27 [class=intent, fillcolor=lightblue, label="am I talking to a bot?", shape=rect, style=filled];
+28 [class=intent, fillcolor=lightblue, label="thanks friend", shape=rect, style=filled];
+29 [class=intent, fillcolor=lightblue, label="how are you doing ?", shape=rect, style=filled];
+30 [class=intent, fillcolor=lightblue, label="Which technologies are use ?", shape=rect, style=filled];
 0 -> 7  [class="", key=NONE, label=""];
-0 -> 17  [class="", key=0];
+0 -> 21  [class="", key=0];
 1 -> 2  [class="", key=NONE, label=""];
-2 -> 18  [class="", key=0];
-2 -> 19  [class="", key=0];
+2 -> 22  [class="", key=0];
+2 -> 23  [class="", key=0];
 3 -> "-1"  [class="", key=NONE, label=""];
 6 -> "-1"  [class="", key=NONE, label=""];
-7 -> 20  [class="", key=0];
-7 -> 21  [class="", key=0];
-7 -> 22  [class="", key=0];
-7 -> 23  [class="", key=0];
 7 -> 24  [class="", key=0];
+7 -> 25  [class="", key=0];
+7 -> 26  [class="", key=0];
+7 -> 27  [class="", key=0];
+7 -> 28  [class="", key=0];
+7 -> 29  [class="", key=0];
+7 -> 30  [class="", key=0];
 8 -> "-1"  [class="", key=NONE, label=""];
 10 -> "-1"  [class="", key=NONE, label=""];
 12 -> "-1"  [class="", key=NONE, label=""];
 14 -> "-1"  [class="", key=NONE, label=""];
 16 -> "-1"  [class="", key=NONE, label=""];
-17 -> 1  [class="", key=0];
-18 -> 3  [class="", key=0];
-19 -> 6  [class="", key=0];
-20 -> 8  [class="", key=0];
-21 -> 10  [class="", key=0];
-22 -> 12  [class="", key=0];
-23 -> 14  [class="", key=0];
-24 -> 16  [class="", key=0];
+18 -> "-1"  [class="", key=NONE, label=""];
+20 -> "-1"  [class="", key=NONE, label=""];
+21 -> 1  [class="", key=0];
+22 -> 3  [class="", key=0];
+23 -> 6  [class="", key=0];
+24 -> 8  [class="", key=0];
+25 -> 10  [class="", key=0];
+26 -> 12  [class="", key=0];
+27 -> 14  [class="", key=0];
+28 -> 16  [class="", key=0];
+29 -> 18  [class="", key=0];
+30 -> 20  [class="", key=0];
 }
 `;
     drawGraph(graph);
