--- a/graph.html
+++ b/graph.html
@@ -137,59 +137,64 @@
     graph = `digraph  {
 0 [class="start active", fillcolor=green, fontsize=12, label=START, style=filled];
 "-1" [class=end, fillcolor=red, fontsize=12, label=END, style=filled];
-1 [class="", fontsize=12, label=utter_greet];
-2 [class="", fontsize=12, label=utter_ask];
-3 [class="", fontsize=12, label=utter_affirm_help];
-6 [class="", fontsize=12, label=utter_deny_help];
-7 [class="", fontsize=12, label="..."];
-8 [class="", fontsize=12, label=utter_greet];
-10 [class="", fontsize=12, label=utter_default];
-12 [class="", fontsize=12, label=utter_goodbye];
-14 [class="", fontsize=12, label=utter_iamabot];
-16 [class="", fontsize=12, label=utter_youarewelcome];
-18 [class="", fontsize=12, label=utter_siting_on_the_server];
-20 [class="", fontsize=12, label=utter_skills];
-21 [class=intent, fillcolor=lightblue, label=start, shape=rect, style=filled];
-22 [class=intent, fillcolor=lightblue, label=y, shape=rect, style=filled];
-23 [class=intent, fillcolor=lightblue, label="don't like that", shape=rect, style=filled];
-24 [class=intent, fillcolor=lightblue, label=goodevening, shape=rect, style=filled];
-25 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
-26 [class=intent, fillcolor=lightblue, label="see you around", shape=rect, style=filled];
-27 [class=intent, fillcolor=lightblue, label="am I talking to a bot?", shape=rect, style=filled];
-28 [class=intent, fillcolor=lightblue, label="thanks friend", shape=rect, style=filled];
-29 [class=intent, fillcolor=lightblue, label="how are you doing ?", shape=rect, style=filled];
-30 [class=intent, fillcolor=lightblue, label="Which technologies are use ?", shape=rect, style=filled];
-0 -> 7  [class="", key=NONE, label=""];
-0 -> 21  [class="", key=0];
-1 -> 2  [class="", key=NONE, label=""];
-2 -> 22  [class="", key=0];
-2 -> 23  [class="", key=0];
-3 -> "-1"  [class="", key=NONE, label=""];
-6 -> "-1"  [class="", key=NONE, label=""];
-7 -> 24  [class="", key=0];
-7 -> 25  [class="", key=0];
-7 -> 26  [class="", key=0];
-7 -> 27  [class="", key=0];
-7 -> 28  [class="", key=0];
-7 -> 29  [class="", key=0];
-7 -> 30  [class="", key=0];
-8 -> "-1"  [class="", key=NONE, label=""];
-10 -> "-1"  [class="", key=NONE, label=""];
-12 -> "-1"  [class="", key=NONE, label=""];
-14 -> "-1"  [class="", key=NONE, label=""];
-16 -> "-1"  [class="", key=NONE, label=""];
-18 -> "-1"  [class="", key=NONE, label=""];
-20 -> "-1"  [class="", key=NONE, label=""];
-21 -> 1  [class="", key=0];
-22 -> 3  [class="", key=0];
-23 -> 6  [class="", key=0];
-24 -> 8  [class="", key=0];
-25 -> 10  [class="", key=0];
-26 -> 12  [class="", key=0];
-27 -> 14  [class="", key=0];
-28 -> 16  [class="", key=0];
-29 -> 18  [class="", key=0];
-30 -> 20  [class="", key=0];
+1 [class="", fontsize=12, label=utter_fallback];
+2 [class="", fontsize=12, label=utter_greet];
+3 [class="", fontsize=12, label=utter_ask];
+4 [class="", fontsize=12, label=utter_affirm_help];
+7 [class="", fontsize=12, label=utter_deny_help];
+9 [class="", fontsize=12, label=utter_fallback_again];
+10 [class="", fontsize=12, label="..."];
+11 [class="", fontsize=12, label=utter_greet];
+13 [class="", fontsize=12, label=utter_goodbye];
+15 [class="", fontsize=12, label=utter_iamabot];
+17 [class="", fontsize=12, label=utter_youarewelcome];
+19 [class="", fontsize=12, label=utter_siting_on_the_server];
+21 [class="", fontsize=12, label=utter_skills];
+22 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
+23 [class=intent, fillcolor=lightblue, label="what can I do", shape=rect, style=filled];
+24 [class=intent, fillcolor=lightblue, label="/nlu_fallback", shape=rect, style=filled];
+25 [class=intent, fillcolor=lightblue, label="of course", shape=rect, style=filled];
+26 [class=intent, fillcolor=lightblue, label="I don't think so", shape=rect, style=filled];
+27 [class=intent, fillcolor=lightblue, label="hello there", shape=rect, style=filled];
+28 [class=intent, fillcolor=lightblue, label="cee you later", shape=rect, style=filled];
+29 [class=intent, fillcolor=lightblue, label="am I talking to a bot?", shape=rect, style=filled];
+30 [class=intent, fillcolor=lightblue, label=thanks, shape=rect, style=filled];
+31 [class=intent, fillcolor=lightblue, label="What have you been up to?", shape=rect, style=filled];
+32 [class=intent, fillcolor=lightblue, label="Which technologies are use ?", shape=rect, style=filled];
+0 -> 10  [class="", key=NONE, label=""];
+0 -> 22  [class="", key=0];
+0 -> 23  [class="", key=0];
+1 -> "-1"  [class="", key=NONE, label=""];
+1 -> 24  [class="", key=0];
+2 -> 3  [class="", key=NONE, label=""];
+3 -> 25  [class="", key=0];
+3 -> 26  [class="", key=0];
+4 -> "-1"  [class="", key=NONE, label=""];
+7 -> "-1"  [class="", key=NONE, label=""];
+9 -> "-1"  [class="", key=NONE, label=""];
+10 -> 27  [class="", key=0];
+10 -> 28  [class="", key=0];
+10 -> 29  [class="", key=0];
+10 -> 30  [class="", key=0];
+10 -> 31  [class="", key=0];
+10 -> 32  [class="", key=0];
+11 -> "-1"  [class="", key=NONE, label=""];
+13 -> "-1"  [class="", key=NONE, label=""];
+15 -> "-1"  [class="", key=NONE, label=""];
+17 -> "-1"  [class="", key=NONE, label=""];
+19 -> "-1"  [class="", key=NONE, label=""];
+21 -> "-1"  [class="", key=NONE, label=""];
+22 -> 1  [class="", key=0];
+23 -> 2  [class="", key=0];
+24 -> 9  [class="", key=0];
+25 -> 4  [class="", key=0];
+26 -> 7  [class="", key=0];
+27 -> 11  [class="", key=0];
+28 -> 13  [class="", key=0];
+29 -> 15  [class="", key=0];
+30 -> 17  [class="", key=0];
+31 -> 19  [class="", key=0];
+32 -> 21  [class="", key=0];
 }
 `;
     drawGraph(graph);
